--- a/src/assets/Css/home/CarroselHome.css
+++ b/src/assets/Css/home/CarroselHome.css
@@ -17,6 +17,16 @@
   height: 100%;
 }
 
+.carousel-item {
+    display: block;
+    opacity: 0;
+    transition: opacity 0.4s ease-in-out;
+  }
+  
+  .carousel-item.active {
+    opacity: 1;
+  }
+  
 .carousel-item img {
   object-fit: cover;
   height: 100%;
